|UPDATE| 블로그 메인 사진 및 링크 변경 0713

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://seeungmin.github.io
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
-cover_image: /bg.jpeg
+cover_image: /summer.jpg
 
 # Gems
 plugins:
@@ -29,14 +29,14 @@ exclude:
 
 # Optimize Jekyl SEO Tag
 twitter:
-  username: 
-  card: 
+  username: vszhub
+  card: summary
 logo: logo.png
 social:
-  name: Seeunmin Lee
+  name: Songzi Vong
   links:
     - https://twitter.com/vszhub
-    - https://github.com/seeungmin
+    - https://github.com/vszhub
 google_site_verification: xxxxx
 lang: en
 
